--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -8,19 +8,21 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Text?>
+
 
 <?import javafx.scene.control.Label?>
 <GridPane id="grid" alignment="CENTER" hgap="5.0" minHeight="235" minWidth="225" prefHeight="235.0" prefWidth="225.0" vgap="5.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller">
 <stylesheets>
-    <URL value="@definitions.css" />
+    <URL value="@digitron.css" />
 </stylesheets>
 <StackPane fx:id="outputPanel" alignment="CENTER" minHeight="30.0" minWidth="225" GridPane.columnIndex="0"  GridPane.columnSpan="4" GridPane.rowIndex="0" GridPane.rowSpan="1">
-    <Label fx:id="display" text="${controller.output}" StackPane.alignment="CENTER_LEFT">
+    <Label fx:id="display" text="${controller.output}" maxWidth="Infinity" prefHeight="40" textAlignment="RIGHT" GridPane.columnIndex="0" GridPane.rowIndex="1" StackPane.alignment="CENTER_LEFT">
         <StackPane.margin>
             <Insets left="20.0" />
         </StackPane.margin></Label>
-    <Rectangle fill="#05f51573"  pickOnBounds="true" stroke="TRANSPARENT" strokeType="INSIDE" width="100000000" height="50" StackPane.alignment="CENTER" />
     <GridPane.margin>
         <Insets bottom="5.0" top="5.0" left="5.0" right="5.0"/>
     </GridPane.margin>
